compile_report_final_2.txt
--- Building for 8MB Flash ESP32 (Default) ---
--- Using partition file: partitions.csv ---
WARNING: library LiquidCrystal I2C claims to run on avr architecture(s) and may be incompatible with your current board which runs on esp32 architecture(s).
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino: In function 'void send_ftp_file(char*, bool, bool)':
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:142:30: error: label 'ftp_cleanup' used but not defined
  142 |                         goto ftp_cleanup;
      |                              ^~~~~~~~~~~
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino: At global scope:
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:513:3: error: expected declaration before '}' token
  513 |   }
      |   ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:515:1: error: 'ftp_cleanup' does not name a type
  515 | ftp_cleanup:
      | ^~~~~~~~~~~
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:538:3: error: expected unqualified-id before 'if'
  538 |   if (weLockedFS) xSemaphoreGive(fsMutex);
      |   ^~
In file included from /Users/satishkripavasan/Library/Arduino15/packages/esp32/tools/esp32-libs/3.3.6/include/freertos/esp_additions/include/freertos/idf_additions.h:22,
                 from /Users/satishkripavasan/Library/Arduino15/packages/esp32/tools/esp32-libs/3.3.6/include/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from /Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/cores/esp32/Arduino.h:33,
                 from /private/tmp/aio_build_8mb/sketch/AIO9_5.0.ino.cpp:1:
/Users/satishkripavasan/Library/Arduino15/packages/esp32/tools/esp32-libs/3.3.6/include/freertos/FreeRTOS-Kernel/include/freertos/semphr.h:428:58: error: expected constructor, destructor, or type conversion before '(' token
  428 | #define xSemaphoreGive( xSemaphore )    xQueueGenericSend( ( QueueHandle_t ) ( xSemaphore ), NULL, semGIVE_BLOCK_TIME, queueSEND_TO_BACK )
      |                                                          ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:539:3: note: in expansion of macro 'xSemaphoreGive'
  539 |   xSemaphoreGive(modemMutex);
      |   ^~~~~~~~~~~~~~
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:540:1: error: expected declaration before '}' token
  540 | }
      | ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino: In function 'void fetchFromHttpAndUpdate(char*)':
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:802:35: error: request for member 'indexOf' in 'waitForResponse(((const char*)"OK"), 2000)', which is of non-class type 'bool'
  802 |   if (waitForResponse("OK", 2000).indexOf("OK") == -1) {
      |                                   ^~~~~~~
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:1195:41: error: a function-definition is not allowed here before '{' token
 1195 | void copyFromSPIFFSToFS(char *dateFile) {
      |                                         ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:1392:52: error: a function-definition is not allowed here before '{' token
 1392 | char *parse_http_head(char *response, char *check) {
      |                                                    ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:1407:26: error: a function-definition is not allowed here before '{' token
 1407 |     const char *dateStr) { // v5.80: Send /dailyftp_YYYYMMDD.txt
      |                          ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_health.ino:3:28: error: a function-definition is not allowed here before '{' token
    3 | void get_signal_strength() {
      |                            ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_health.ino:67:20: error: a function-definition is not allowed here before '{' token
   67 | void get_network() {
      |                    ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_health.ino:207:25: error: a function-definition is not allowed here before '{' token
  207 | void get_registration() {
      |                         ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_health.ino:658:19: error: a function-definition is not allowed here before '{' token
  658 | void get_a7672s() {
      |                   ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_health.ino:806:31: error: a function-definition is not allowed here before '{' token
  806 | void process_sms(char msg_no) {
      |                               ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/windSpeed.ino:123:2: error: expected '}' at end of input
  123 | }
      |  ^
/Users/satishkripavasan/Documents/Arduino/ESP32_NEW_DESIGN/ALL_IN_ONE/AIO9_5.0/gprs_ftp.ino:757:45: note: to match this '{'
  757 | void fetchFromHttpAndUpdate(char *fileName) {
      |                                             ^
Multiple libraries were found for "WiFi.h"
  Used: /Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/WiFi
  Not used: /Users/satishkripavasan/Documents/Arduino/libraries/WiFiEspAT

[92mUsed library[0m            [92mVersion[0m [90mPath[0m
[93mKeypad[0m                  3.1.1   [90m/Users/satishkripavasan/Documents/Arduino/libraries/Keypad-master[0m
[93mLiquidCrystal I2C[0m       1.1.2   [90m/Users/satishkripavasan/Documents/Arduino/libraries/LiquidCrystal_I2C[0m
[93mWire[0m                    3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/Wire[0m
[93mPreferences[0m             3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/Preferences[0m
[93mRTClib[0m                  2.1.4   [90m/Users/satishkripavasan/Documents/Arduino/libraries/RTClib[0m
[93mAdafruit BusIO[0m          1.17.4  [90m/Users/satishkripavasan/Documents/Arduino/libraries/Adafruit_BusIO[0m
[93mSD[0m                      3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/SD[0m
[93mFS[0m                      3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/FS[0m
[93mSPI[0m                     3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/SPI[0m
[93mSPIFFS[0m                  3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/SPIFFS[0m
[93mUpdate[0m                  3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/Update[0m
[93mWiFi[0m                    3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/WiFi[0m
[93mNetworking[0m              3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/Network[0m
[93mHULP[0m                    2.0.1   [90m/Users/satishkripavasan/Documents/Arduino/libraries/HULP-master[0m
[93mAdafruit BME280 Library[0m 2.3.0   [90m/Users/satishkripavasan/Documents/Arduino/libraries/Adafruit_BME280_Library[0m
[93mAdafruit Unified Sensor[0m 1.1.15  [90m/Users/satishkripavasan/Documents/Arduino/libraries/Adafruit_Unified_Sensor[0m
[93mESPmDNS[0m                 3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/ESPmDNS[0m
[93mWebServer[0m               3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/WebServer[0m
[93mHash[0m                    3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6/libraries/Hash[0m

[92mUsed platform[0m [92mVersion[0m [90mPath[0m
[93mesp32:esp32[0m   3.3.6   [90m/Users/satishkripavasan/Library/Arduino15/packages/esp32/hardware/esp32/3.3.6[0m
Error during build: exit status 1
--- Compilation FAILED ---
